# Anonymity

./: .env.example  .replit  Anchor.toml  QUICK_START.md  README.md  index.html  install.sh  package-scripts.json  package.json  vite.config.ts
attached_assets/: Pasted-Excellent-Thank-you-for-that-clear-and-concise-pivot-I-understand-this-new-functionality-perfectly-1751292075490_1751292075491.txt  Pasted-Install-Replit-s-Node-tools-y-n-y-npm-warn-ERESOLVE-overriding-peer-dependency-npm-warn-ERESOLVE-1751242084928_1751242084930.txt  Pasted-Of-course-You-are-absolutely-right-to-ask-for-this-After-the-confusion-having-a-clear-definitive-1751240950228_1751240950229.txt  Pasted-npm-WARN-ERESOLVE-overriding-peer-dependency-npm-WARN-ERESOLVE-overriding-peer-dependency-npm-WARN-E-1751242764253_1751242764256.txt
backend/: .env.example  package.json  tsconfig.json
backend/src/: server.ts
backend/src/utils/: merkleTree.ts  zkProof.ts
programs/anonymity-pool/: Cargo.toml
programs/anonymity-pool/src/: lib.rs
scripts/: deploy.ts
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src/components/: Dashboard.tsx  DepositFlow.tsx  WithdrawFlow.tsx
src/utils/: crypto.ts
