
[package]
name = "anonymity-pool"
version = "0.1.0"
description = "Privacy pool program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anonymity_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
